fix top gap on fullscreen mobile

--- a/DigitalIcebreakers/ClientApp/src/index.css
+++ b/DigitalIcebreakers/ClientApp/src/index.css
@@ -6,7 +6,7 @@ body {
 
 @media (max-width: 767px) {
     /* On small screens, the nav menu spans the full width of the screen. Leave a space for it. */
-    body {
+    .navPad {
         padding-top: 50px;
     }
 }
